add auth and registration

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h2>📚 Список книг</h2>
+        <div class="header-row">
+            <h2>📚 Список книг</h2>
+            <a href="login.html" class="login-btn">Авторизуватись</a>
+        </div> 
 
         <table>
             <thead>
